--- a/app/src/main/res/layout/fragment_note_list.xml
+++ b/app/src/main/res/layout/fragment_note_list.xml
@@ -6,6 +6,7 @@
     android:name="app.cordes.notepad.NoteFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:nestedScrollingEnabled="false"
     android:layout_marginBottom="?attr/actionBarSize"
     app:layoutManager="LinearLayoutManager"
     tools:context=".NotesListFragment" />
