--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
             android:layout_marginTop="@dimen/top_margin"
             android:layout_marginBottom="@dimen/top_margin"
             android:layout_marginStart="@dimen/side_margin"
-            android:text="@string/app_name"
+            android:text="@string/short_app_name"
             android:textStyle="bold"
             android:textSize="24sp"
             android:textColor="@color/colorContrast"/>
