--- a/app/src/main/res/drawable/note_item_background.xml
+++ b/app/src/main/res/drawable/note_item_background.xml
@@ -2,14 +2,14 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 <item android:state_pressed="true" >
     <shape>
-        <stroke android:width="2dp" android:color="@color/borderColor" />
+        <solid android:color="@color/itemBackgroundSelectedColor" />
         <corners android:radius="10dp"/>
         <padding android:left="8dp" android:top="8dp" android:right="8dp" android:bottom="8dp" />
     </shape>
 </item>
 <item>
     <shape>
-        <stroke android:width="1dp" android:color="@color/borderColor" />
+        <solid android:color="@color/itemBackgroundColor" />
         <corners android:radius="10dp"/>
         <padding android:left="8dp" android:top="8dp" android:right="8dp" android:bottom="8dp" />
     </shape>
