--- a/app/src/main/res/menu/menu_note.xml
+++ b/app/src/main/res/menu/menu_note.xml
@@ -3,6 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="app.cordes.notepad.MainActivity">
     <item
+        android:id="@+id/action_revert"
+        android:orderInCategory="100"
+        android:title="@string/revert"
+        android:icon="@drawable/ic_restore_page_24dp"
+        app:showAsAction="ifRoom" />
+    <item
         android:id="@+id/action_share"
         android:orderInCategory="100"
         android:title="@string/share"
